mise à jour version osx

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /installationOSX.html~
 /createdb_gestiondesnotes.sql~
 /gestiondesnotes.py~
+/_minted-installationOSX/
+/installationOSX.tex~
+/test_tksheet.py~
